--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,10 @@
-<footer class="holder footer-holder">
-	<div class="row footer-row">
-		<div class="footer">
-			<div class="inner">
-				<p>Copyright MMXIII Chopstick</p>
-			</div>
+<footer class="holder--footer holder">
+	<div class="row row--footer">
+		<div class="footer col">
+			<p>				
+				Copyright &copy; 2015 Simon Coudeville <br>
+				<!-- The colors in this gradient are PaleGoldenRod and Khaki. -->
+			</p>
 		</div>
 	</div>
 </footer>
