--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -19,33 +19,37 @@
 	@import "shared/typography";
 	@import "shared/ui";
 
+// fonts
+
+	@import "theme/fonts";
+
 // Patterns: feel free to include only what you need.
 
 	@import "patterns/reset";
 	@import "patterns/grid";
-	@import "patterns/colors";
-	@import "patterns/buttons";
-	@import "patterns/alerts";
-	@import "patterns/pagination";
-	@import "patterns/helpers";
-	@import "patterns/media";
-	@import "patterns/tables";
-	@import "patterns/icons";
+	// @import "patterns/colors";
+	// @import "patterns/buttons";
+	// @import "patterns/alerts";
+	// @import "patterns/pagination";
+	// @import "patterns/helpers";
+	// @import "patterns/media";
+	// @import "patterns/tables";
+	// @import "patterns/icons";
 
 // Theme: feel free to delete any or all.
 
 	@import "theme/base";
 	@import "theme/typography";
-	@import "theme/forms";
+	// @import "theme/forms";
 	@import "theme/debug";
 
 	// Theme Demo Modules: for boilerplate purpose only. Replace this with your own modules.
 
 		@import "theme/modules/frame";
 		@import "theme/modules/home";
-		@import "theme/modules/styleguide";
-		@import "theme/modules/styleguide-syntax";
-		@import "theme/modules/grid";
+		// @import "theme/modules/styleguide";
+		// @import "theme/modules/styleguide-syntax";
+		// @import "theme/modules/grid";
 
 // Print
 
