--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if IE 7]>         <html class="no-js t-cornflowerblue lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js t-cornflowerblue lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js t-cornflowerblue"> <!--<![endif]-->
 
 <head>
 	<meta charset="utf-8">
@@ -20,6 +20,8 @@
 
 	<!-- Custom modernizr build: http://modernizr.com — load other JavaScript at the end of document -->
 	<script src="js/modernizr.custom.js"></script>
+
+	<link href="//cloud.webtype.com/css/a59b3959-10d7-436b-a916-0e5009d13e19.css" rel="stylesheet" type="text/css" />
 
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="css/screen.css">
@@ -46,14 +48,14 @@
 
 	{% include footer.html %}
 
-	<!-- Always Load jQuery First -->
+	<!-- Always Load jQuery First 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-	<script>window.jQuery || document.write('<script src="/js/bower_components/jquery/dist/jquery.min.js"><\/script>')</script>
+	<script>window.jQuery || document.write('<script src="/js/bower_components/jquery/dist/jquery.min.js"><\/script>')</script> -->
 
 	<!-- Make responsive website responsive in IE7 & 8 -->
 	<!--[if IE 8 | IE 7]><script src="/js/bower_components/respond/dest/respond.min.js"></script><![endif]-->
 
-	<!-- Theme specific JavaScript. Add your other scripts here -->
-	<script src="js/theme.concat.js"></script>
+	<!-- Theme specific JavaScript. Add your other scripts here 
+	<script src="js/theme.concat.js"></script> -->
 </body>
 </html>
