--- a/scss/theme/_typography.scss
+++ b/scss/theme/_typography.scss
@@ -10,14 +10,15 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: $beta-font-family;
-	font-weight: $alpha-font-weight;
+	// font-family: $beta-font-family;
+	// font-weight: $alpha-font-weight;
+	font-weight: 400;
 	text-rendering: optimizelegibility;
-	@include margin-bottom($alpha-line-height);
+	@include margin-bottom(1);
 }
 
 h1 {
-	@include text-dimensions($ms6,2);
+	@include text-dimensions($ms5,2);
 }
 
 h2 {
@@ -42,7 +43,7 @@ dl,
 table,
 address {
 	@include text-dimensions($alpha-font-size,1);
-	@include margin-bottom($alpha-line-height);
+	@include margin-bottom(1);
 }
 
 pre {
@@ -92,43 +93,28 @@ small,
 
 a {
 	text-decoration: none;
-	color: $alpha-link-color;
-	transition: color .22s ease-in-out;
+	color: $alpha-ui-color;
+	transition: all .1s ease-in-out;
 
 	&:visited {
-		color: $alpha-link-colorvisited;
+		color: $alpha-ui-color;
 	}
 
 	&:hover {
-		text-decoration: underline;
-		color: $alpha-link-colorhover;
+		color: rgba($alpha-ui-color,.75);
+		border-color: $alpha-ui-color;
 	}
 
 	&:focus {
+		color: $alpha-ui-color;
+		border-color: $alpha-ui-color;
 		outline: thin dotted;
-		color: $alpha-link-colorfocus;
+		// color: $alpha-link-colorfocus;
 	}
 
 	&:hover,
 	&:active {
 		outline: 0;
-	}
-
-}
-
-
-//
-// Baseline grid
-// ---
-// This can be toggled in the _settings.sccs file (default is false)
-// There are also options to set the color of the grid and the classname (default is '.holder')
-// (inspired by the baseline grid in OOCSS --> http://bit.ly/PF6NhY)
-//
-@if $show-baseline-grid == true {
-
-	.#{$baseline-holder} {
-		background-image: linear-gradient(transparent 50%, $grid-color 50%); // draw the baseline grid
-		background-size: em($alpha-baseline-grid) em($alpha-baseline-grid); // calculate the baselinegrid in em's
 	}
 
 }
