--- a/scss/theme/modules/_frame.scss
+++ b/scss/theme/modules/_frame.scss
@@ -2,12 +2,25 @@
 // Frame
 //
 
+#mfPreviewBar {
+	display: none;
+}
+
 .holder {
-	background-color: $delta-ui-color;
-	@include padding-top(1.5);
+	@extend %clearfix;
+	@include padding-top(1);
 
 	@include mq($bp2) {
-		@include px-padding-lr(1,1);
+		@include padding-top(2);
+		// @include padding-tb(2,1);
+		@include padding-lr(1,1);
+	}
+
+	@include mq($bp3) {
+		// @include padding-tb(6,4.5);
+		@include padding-top(3);		
+		// @include padding-tb(3,2);		
+		@include padding-lr(2,2);		
 	}
 
 }
@@ -16,142 +29,34 @@
 // Header
 //
 
-.header {
-	@include box-(12,1,1);
-
-	.inner {
-		@extend %clearfix;
-		border-bottom: 1px solid $beta-ui-color-light;
-	}
-
-}
-
-.header-holder {
-	padding: 0;
-	border: none;
-
-	@include mq($bp2) {
-		padding-top: 0;
-		padding-bottom: 0;
-	}
-
-	@include mq($bp4) {
-		padding-top: 0;
-		padding-bottom: 0;
-	}
-
-}
+// .holder--header {
+// 	background-color: #fff;
+// }
 
 .logo {
 	float: left;
-	font-family: $alpha-font-family;
-	font-weight: $alpha-font-weight;
-	margin-bottom: 0;
-	@include text-dimensions($alpha-font-size,1);
+	// font-family: $alpha-font-family;
+	// font-family: "Univers Pro 65 Bold";
+	// font-family: "Nitti Grotesk";
+	// font-weight: 700;
+	// font-family: $beta-font-family;
+	// font-weight: 300;
+
 
 	a {
 		display: block;
 		text-decoration: none;
-		color: $beta-text-color;
-		@include text-dimensions($alpha-font-size,1,0,1,1);
+		border: none;
+		background: none;
+		@include text-dimensions($alpha-font-size,1);
 
-		&:hover,
-		&:focus {
-			color: $alpha-text-color;
-		}
-
-		@include mq($bp3) {
-			@include padding-tb(1.25,1.25);
-		}
+		// &:hover,
+		// &:focus {
+		// 	// color: $alpha-text-color;
+		// }
 
 	}
 
-}
-
-.main-nav {
-	width: 100%;
-	float: left;
-
-	ul {
-		@extend %clearfix;
-		font-family: $alpha-font-family;
-		border-top: 1px solid $beta-ui-color-light;
-		@include list-nav;
-		@include margin-bottom(.75);
-		@include padding-top(.75);
-
-		@include mq($bp3) {
-			border-top: none;
-			padding-top: 0;
-			margin-bottom: 0;
-		}
-
-	}
-
-	a {
-		display: block;
-		color: lighten($alpha-text-color,50);
-		text-decoration: none;
-		font-weight: $beta-font-weight;
-		@include text-dimensions($alpha-font-size,1,0,.25,.25);
-
-		@include mq($bp3) {
-			@include padding-tb(1.25,1.25);
-		}
-
-
-	}
-
-	a:hover,
-	.selected a {
-		color: darken($alpha-ui-color,0);
-	}
-
-}
-
-.mobile-nav .main-nav {
-	display: none;
-}
-
-.main-nav,
-.mobile-nav .main-nav {
-
-	@include mq($bp3) {
-		display: block !important;
-		width: auto;
-		float: right;
-
-		ul {
-			@include horizontal-nav();
-		}
-
-		li {
-			@include px-margin-lr(2,0);
-		}
-
-	}
-
-}
-
-.main-nav-trigger {
-	display: block;
-	height: 2em;
-	width: 2em;
-	margin-top: 0.75em;
-	float: right;
-	text-indent: -9999px;
-	@include text-dimensions($alpha-font-size,1,0);
-	@include svg-bg("../img/icon-menu", ".png", $alpha-text-color, 50%, no-repeat);
-
-	@include mq($bp3) {
-		display: none;
-	}
-
-}
-
-.svg .trigger-active,
-.trigger-active {
-	background-color: $alpha-link-color;
 }
 
 //
@@ -159,7 +64,6 @@
 //
 
 .main-holder {
-	border-bottom: 1px solid $beta-ui-color-light;
 
 	@include mq($bp2) {
 		@include padding-tb(2,.5);
@@ -171,45 +75,29 @@
 
 }
 
-//
-// Doormat
-//
-
-.doormat-holder {
-
-	@include mq($bp2) {
-		@include padding-tb(2,.5);
-	}
-
-	@include mq($bp5) {
-		@include padding-tb(3,1.5);
-	}
-
-}
-
-.doormat-col-4 {
-	@include box-(12,1,1);
-
-	@include mq($bp4) {
-		@include box-(4,1,1);
-	}
-
-}
 
 //
 // Footer
 //
 
-.footer-holder {
-	background-color: $alpha-text-color;
-	color: lighten($alpha-text-color,70);
+.holder--footer {
+	border: none;
+	// opacity: .75;
 
-	p {
-		padding: 0;
+	// @include mq($bp5) {
+	// 	position: absolute;
+	// 	bottom: 0;
+	// 	left: 0;
+	// 	right: 0;
+	// 	@include padding-bottom(2);
+	// }
+
+	@include mq($bp2) {
+		@include padding-bottom(1);	
+	}
+
+	@include mq($bp3) {
+		@include padding-bottom(3);				
 	}
 
 }
-
-	.footer {
-		@include box-(12,1,1);
-	}
