changed everything to itcss

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
-<footer class="holder--footer holder">
-	<div class="row row--footer">
-		<div class="footer col">
+<footer class="o-layout__holder c-site-footer">
+	<div class="o-layout__row">
+		<div class="o-layout__item">
 			<p>				
-				Copyright &copy; 2015 Simon Coudeville <br>
+				&copy; 2015 Simon Coudeville<br>
 				<!-- The colors in this gradient are PaleGoldenRod and Khaki. -->
 			</p>
 		</div>
