--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
-<header class="holder holder--header">
-	<div class="row row--header">
-		<div class="header col">
-			<h1 class="logo">
-				<a href="index.html">Simon Coudeville</a>
+<header class="o-layout__holder  c-site-header">
+	<div class="o-layout__row">
+		<div class="o-layout__item">
+			<h1 class="c-logo">
+				The website of Simon Coudeville
 			</h1>			
 		</div>
 	</div>
