--- a/scss/_elements.typography.scss
+++ b/scss/_elements.typography.scss
@@ -1,8 +1,8 @@
-//
-// Typography
-// ---
-// Default markup for typographic elements, based on the settings file.
-//
+/*
+    Elements: Typography
+    ---
+    Default markup for typographic elements
+*/
 
 h1,
 h2,
@@ -10,8 +10,6 @@ h3,
 h4,
 h5,
 h6 {
-	// font-family: $beta-font-family;
-	// font-weight: $alpha-font-weight;
 	font-weight: 400;
 	text-rendering: optimizelegibility;
 	@include margin-bottom(1);
@@ -82,8 +80,7 @@ img {
 
 }
 
-small,
-.small {
+small {
 	@include text-dimensions($ms-1,1,$alpha-line-height);
 }
 
