--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -30,22 +30,12 @@ $grid-columns				: 12;
 
 // Breakpoints calculated in em's, always based on 16px base-value
 
-$bp1						: 320/16*1em;
-$bp2 						: 480/16*1em;
-$bp3						: 680/16*1em;
-$bp4						: 960/16*1em;
-$bp5						: 1140/16*1em;
-$bp6						: 1440/16*1em;
-
-// the last breakpoint is calculated in shared/_grid.scss
-// $bp5: #{1200 / $alpha-font-size}em;
-
-// Modular scale settings
-
-$ratio						: 1.414;
-$importantnumber			: 44;
-$leading					: 1;
-$base-size					: $alpha-font-size/16*1em;
+$bp1						: 320/$alpha-font-size*1em;
+$bp2 						: 480/$alpha-font-size*1em;
+$bp3						: 680/$alpha-font-size*1em;
+$bp4						: 960/$alpha-font-size*1em;
+$bp5						: 1140/$alpha-font-size*1em;
+$bp6						: 1440/$alpha-font-size*1em;
 
 // manual modular scale font sizes
 // based on http://modularscale.com/scale/?px1=16&px2=18&ra1=1.333&ra2=0
