--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -6,10 +6,6 @@
 
 	@import "settings";
 
-// Vendor Dependencies: add things like bourbon or compass imports here.
-
-	// @import "compass";
-
 // Shared: do not delete any of this.
 
 	@import "shared/functions";
@@ -19,38 +15,21 @@
 	@import "shared/typography";
 	@import "shared/ui";
 
-// fonts
+	@import "generic.reset";
+	@import "generic.box-sizing";
 
-	@import "theme/fonts";
+	@import "elements.page";
+	@import "elements.typography";
 
-// Patterns: feel free to include only what you need.
+	@import "objects.layout";
 
-	@import "patterns/reset";
-	@import "patterns/grid";
-	// @import "patterns/colors";
-	// @import "patterns/buttons";
-	// @import "patterns/alerts";
-	// @import "patterns/pagination";
-	// @import "patterns/helpers";
-	// @import "patterns/media";
-	// @import "patterns/tables";
-	// @import "patterns/icons";
+	@import "components.logo";
+	@import "components.site";
+	@import "components.intro";
 
-// Theme: feel free to delete any or all.
-
-	@import "theme/base";
-	@import "theme/typography";
-	// @import "theme/forms";
-	@import "theme/debug";
-
-	// Theme Demo Modules: for boilerplate purpose only. Replace this with your own modules.
-
-		@import "theme/modules/frame";
-		@import "theme/modules/home";
-		// @import "theme/modules/styleguide";
-		// @import "theme/modules/styleguide-syntax";
-		// @import "theme/modules/grid";
+	@import "utilities.content";
+	@import "utilities.grid";
 
 // Print
 
-	@media print {@import "theme/print";}
+	@media print {@import "trumps.print";}
