--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 	<div class="o-layout__row">
 		<div class="o-layout__item">
 			<h1 class="c-logo">
-				The website of Simon Coudeville
+				Simon Coudeville
 			</h1>			
 		</div>
 	</div>
