--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,8 @@
 	<script src="js/modernizr.custom.js"></script>
 
 	<link href="//cloud.webtype.com/css/a59b3959-10d7-436b-a916-0e5009d13e19.css" rel="stylesheet" type="text/css" />
+	<script src="//use.typekit.net/iac8gyg.js"></script>
+	<script>try{Typekit.load();}catch(e){}</script>
 
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="css/screen.css">
@@ -48,14 +50,14 @@
 
 	{% include footer.html %}
 
-	<!-- Always Load jQuery First 
+	<!-- Always Load jQuery First
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="/js/bower_components/jquery/dist/jquery.min.js"><\/script>')</script> -->
 
 	<!-- Make responsive website responsive in IE7 & 8 -->
 	<!--[if IE 8 | IE 7]><script src="/js/bower_components/respond/dest/respond.min.js"></script><![endif]-->
 
-	<!-- Theme specific JavaScript. Add your other scripts here 
+	<!-- Theme specific JavaScript. Add your other scripts here
 	<script src="js/theme.concat.js"></script> -->
 </body>
 </html>
